src/tests/snapshots/cendol__tests__semantic_atomic__atomic_exchange.snap
---
source: src/tests/semantic_atomic.rs
expression: mir
---
type %t0 = void
type %t1 = i32
type %t2 = ptr<%t1>

fn test(%param0: ptr<i32>, %param1: i32) -> void
{
  locals {
    %ret: i32
    %4: i32
  }

  bb1:
    %4 = atomic_xchg(%param0, %param1, SeqCst)
    %ret = %4
    return
}
