src/tests/snapshots/cendol__tests__semantic_atomic__atomic_fetch_ops.snap
---
source: src/tests/semantic_atomic.rs
expression: mir
---
type %t0 = void
type %t1 = i32
type %t2 = ptr<%t1>

fn test(%param0: ptr<i32>, %param1: i32) -> void
{
  locals {
    %ret: i32
    %4: i32
    %5: i32
    %6: i32
    %7: i32
    %8: i32
  }

  bb1:
    %4 = atomic_fetch_+(%param0, %param1, SeqCst)
    %ret = %4
    %5 = atomic_fetch_-(%param0, %param1, SeqCst)
    %ret = %5
    %6 = atomic_fetch_&(%param0, %param1, SeqCst)
    %ret = %6
    %7 = atomic_fetch_|(%param0, %param1, SeqCst)
    %ret = %7
    %8 = atomic_fetch_^(%param0, %param1, SeqCst)
    %ret = %8
    return
}
