src/tests/snapshots/cendol__tests__semantic_atomic__atomic_invalid_float_bitwise.snap
---
source: src/tests/semantic_atomic.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: invalid argument type for atomic builtin: float
Span: SourceSpan(source_id=SourceId(2), start=75, end=78)
