src/tests/snapshots/cendol__tests__semantic_atomic__atomic_invalid_pointer_type.snap
---
source: src/tests/semantic_atomic.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: invalid argument type for atomic builtin: int
Span: SourceSpan(source_id=SourceId(2), start=58, end=61)
